--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -81,8 +81,10 @@
         <!-- Cuerpo dentro del modal -->
 
         <h5 class="modal-title" id="exampleModalLabel">Institución:</h5>
+        <br />
         <div class="input-group">
           <input
+            placeholder="¿En qué institución estudió?"
             type="text"
             name="insti"
             id="insti"
@@ -96,6 +98,7 @@
         <br />
         <div class="input-group">
           <input
+            placeholder="¿Qué titulo obtuvo?"
             type="text"
             name="edudescription"
             id="edudescription"
@@ -106,8 +109,10 @@
         </div>
         <br />
         <h5 class="modal-title" id="exampleModalLabel">Inicio - Final:</h5>
+        <br />
         <div class="input-group">
           <input
+            placeholder="Ingrese el año de inicio y final del estudio"
             type="text"
             name="edutime"
             id="edutime"
@@ -120,7 +125,7 @@
 
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          Close
+          Cerrar
         </button>
         <button
           type="button"
@@ -128,7 +133,7 @@
           class="btn btn-success"
           data-bs-dismiss="modal"
         >
-          Add
+          Agregar
         </button>
       </div>
     </div>
@@ -163,6 +168,7 @@
         <!-- Cuerpo dentro del modal -->
 
         <h5 class="modal-title" id="exampleModalLabel">Institución:</h5>
+        <br />
         <div class="input-group">
           <input
             type="text"
@@ -190,6 +196,7 @@
         </div>
         <br />
         <h5 class="modal-title" id="exampleModalLabel">Inicio - Final:</h5>
+        <br />
         <div class="input-group">
           <input
             type="text"
