--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -27,6 +27,7 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"></li>
@@ -54,8 +55,7 @@
 
         <div
           class="collapse navbar-collapse icono-redes"
-          id="navbarTogglerDemo01"
-        >
+          id="navbarSupportedContent"        >
           <a
             type="button"
             href="mailto:lautiibogado@gmail.com?Subject=Contacto%20desde%20el%20Portfolio"
@@ -66,8 +66,7 @@
 
         <div
           class="collapse navbar-collapse icono-redes"
-          id="navbarTogglerDemo01"
-        >
+          id="navbarSupportedContent"        >
           <a
             href="http://www.linkedin.com/in/lautaro-bogado-591582224/"
             class="betene btn1 hover"
@@ -77,8 +76,7 @@
         
         <div
           class="collapse navbar-collapse icono-redes"
-          id="navbarTogglerDemo01"
-        >
+id="navbarSupportedContent"        >
           <a href="https://wa.me/5493624104545" class="betene btn1 hover"
             ><i class="fab fa-whatsapp"></i
           ></a>
@@ -116,7 +114,7 @@
 <!-- MODAL DE INICIO DE SESION -->
 
 <div
-  class="modal fade"
+  class="modal fade title-box-text"
   id="loginModal"
   tabindex="-1"
   aria-labelledby="exampleModalLabel"
