--- a/src/app/components/proyects/proyects.component.html
+++ b/src/app/components/proyects/proyects.component.html
@@ -1,14 +1,43 @@
 <div
   id="proyects-box"
-  class="card border-dark mb-3 contiene-progres"
+  class="card border-dark mb-3 contiene-progres title-box-text"
   style="max-width: 80rem"
 >
 
-<h4 id="scrollspyHeadingPro" class="title">Mis Proyectos:</h4>
+<div id="proy-plus" *ngIf="usuarioLogueado">
+  <button
+    class="betene btn1 hover"
+    data-bs-toggle="modal"
+    data-bs-target="#proyectModal"
+  >
+    <i class="fas fa-plus"></i>
+  </button>
+</div>
+
+
+<h4 id="scrollspyHeadingPro" class="title title-box-text">Mis Proyectos:</h4>
 
 <div class="row">
   <div class="col-sm-4" *ngFor="let proyect of proyectsInfo; let i=index">
     <div class="card">
+
+      <div id="proy-delete-edit" *ngIf="usuarioLogueado">
+        <button class="betene btn1 hover">
+          <fa-icon
+            [icon]="faTimes"
+            [ngStyle]="{ color: 'red' }"
+            (click)="onDeleteProyect(proyect)"
+          ></fa-icon>
+        </button>
+        <button class="betene btn1 hover"
+        data-bs-toggle="modal"
+        data-bs-target="#editProyectModal"
+        (click)="onSelectEdit(i)"
+        >       
+          <i class="fas fa-pencil-alt"></i>
+        </button>
+      </div>
+
       <img [src]="proyect.img" class="card-img-top" alt="..." style=" width: 20em">
       <div class="card-body">
         <h5 class="card-title">{{proyect.title}}</h5>
@@ -19,4 +48,177 @@
   </div>
 </div>
 
+
+<!-- MODAL -->
+<!-- Modal -->
+<div
+  class="modal fade"
+  id="proyectModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title" id="exampleModalLabel">
+          Agregue su nuevo proyecto:
+        </h3>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+
+      <div class="modal-body">
+        <!-- Cuerpo dentro del modal -->
+
+        <h5 class="modal-title" id="exampleModalLabel">Título:</h5>
+        <br />
+        <div class="input-group">
+          <input
+            placeholder="Ingrese un título para su proyecto"
+            type="text"
+            name="titleproy"
+            id="titleproy"
+            [(ngModel)]="newPROY.title"
+            class="form-control"
+            aria-describedby="basic-addon1"
+          />
+        </div>
+        <br />
+        <h5 class="modal-title" id="exampleModalLabel">Descripción:</h5>
+        <br />
+        <div class="input-group">
+          <input
+            placeholder="Ingrese una breve descripción de su proyecto"
+            type="text"
+            name="proydescrip"
+            id="proydescrip"
+            [(ngModel)]="newPROY.description"
+            class="form-control"
+            aria-describedby="basic-addon1"
+          />
+        </div>
+        <br />
+        <h5 class="modal-title" id="exampleModalLabel">Link:</h5>
+        <br />
+        <div class="input-group">
+          <input
+            placeholder="Ingrese el link donde tiene alojado su proyecto"
+            type="text"
+            name="linkproy"
+            id="linkproy"
+            [(ngModel)]="newPROY.link"
+            class="form-control"
+            aria-describedby="basic-addon1"
+          />
+        </div>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Cerrar
+        </button>
+        <button
+          type="button"
+          (click)="addProyect(newPROY)"
+          class="btn btn-success"
+          data-bs-dismiss="modal"
+        >
+          Agregar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- MODAL DEL EDIT -->
+<!-- Modal -->
+<div
+  class="modal fade"
+  id="editProyectModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title" id="exampleModalLabel">
+          Edite su proyecto:
+        </h3>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+
+      <div class="modal-body">
+        <!-- Cuerpo dentro del modal -->
+
+        <h5 class="modal-title" id="exampleModalLabel">Título:</h5>
+        <br />
+        <div class="input-group">
+          <input
+            type="text"
+            name="edittitleproy"
+            id="edittitleproy"
+            *ngIf="proSelected" 
+            [(ngModel)]="proSelected.title"
+            class="form-control"
+            aria-describedby="basic-addon1"
+          />
+        </div>
+        <br />
+        <h5 class="modal-title" id="exampleModalLabel">Descripción:</h5>
+        <br />
+        <div class="input-group">
+          <input
+            placeholder="Ingrese una breve descripción de su proyecto"
+            type="text"
+            name="editprodescrip"
+            id="editprodescrip"
+            *ngIf="proSelected" 
+            [(ngModel)]="proSelected.description"
+            class="form-control"
+            aria-describedby="basic-addon1"
+          />
+        </div>
+        <br />
+        <h5 class="modal-title" id="exampleModalLabel">Link:</h5>
+        <br />
+        <div class="input-group">
+          <input
+            placeholder="Ingrese el link donde tiene alojado su proyecto"
+            type="text"
+            name="editprolink"
+            id="editprolink"
+            *ngIf="proSelected" 
+            [(ngModel)]="proSelected.link"
+            class="form-control"
+            aria-describedby="basic-addon1"
+          />
+        </div>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Cerrar
+        </button>
+        <button
+          type="button"
+          (click)="onUpdate()"
+          class="btn btn-success"
+          data-bs-dismiss="modal"
+        >
+          Actualizar
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
