--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -105,13 +105,14 @@
     display: flex;
     align-items: center;
     position: absolute;
-    right: 73px;
+    right: 25px;
     top: 10px;
 }
 
 #skill-item-card{
     margin-top: 60px;
     margin-bottom: 30px;
+    list-style: none;
 }
 
 .contiene-progress{
@@ -126,4 +127,19 @@
     margin-bottom: 40px;
     margin-right: 25px;
 
+}
+
+#sk-delete-edit{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    top: 5px;
+    right: 5px;
+}
+#sk-delete-edit button{
+    margin-right: 8px;
+}
+
+ul{
+    list-style: none;
 }
