--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -17,9 +17,8 @@
     <div>
       <ul
         id="education-list"
-        *ngFor="let item of experienciaInfo; let i = index"
       >
-        <li>
+        <li *ngFor="let item of experienciaInfo; let i = index">
           <div id="exp-delete-edit" *ngIf="usuarioLogueado">
             <button class="betene btn1 hover">
               <fa-icon
