--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -20,22 +20,22 @@
       >
         <li *ngFor="let item of experienciaInfo; let i = index">
           <div id="exp-delete-edit" *ngIf="usuarioLogueado">
-            <button class="betene btn1 hover">
+            <a class="betene btn1 hover">
               <fa-icon
                 [icon]="faTimes"
                 [ngStyle]="{ color: 'red' }"
                 (click)="onDeleteExperiencia(item)"
               ></fa-icon>
-            </button>
+            </a>
 
-            <button
+            <a
               class="betene btn1 hover"
               data-bs-toggle="modal"
               data-bs-target="#expEditModal"
               (click)="onSelectEdit(i)"
             >
               <i class="fas fa-pencil-alt"></i>
-            </button>
+          </a>
           </div>
 
           <div class="container-item">
