--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,5 @@
   <app-experiencia></app-experiencia>
   <app-skills></app-skills>
   <app-proyects></app-proyects>
+  <app-footer></app-footer>
 </div>
