--- a/src/app/components/proyects/proyects.component.html
+++ b/src/app/components/proyects/proyects.component.html
@@ -38,7 +38,7 @@
         </button>
       </div>
 
-      <img [src]="proyect.img" class="card-img-top" alt="..." style=" width: 25em">
+      <img [src]="proyect.img" class="card-img-top" alt="..." style=" width: auto">
       <div class="card-body">
         <h5 class="card-title">{{proyect.title}}</h5>
         <p class="card-text">{{proyect.description}}</p>
