error classlist fixed

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img
@@ -42,11 +42,11 @@
             Navegador de Secciones
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a href="#scrollspyHeadingAcercaDe">Acerca de</a></li>
-            <li><a href="#scrollspyHeadingEdu">Educación</a></li>
-            <li><a href="#scrollspyHeadingExp">Experiencia</a></li>
-            <li><a href="#scrollspyHeadingSkills">Skills</a></li>
-            <li><a href="#scrollspyHeadingPro">Proyectos</a></li>
+            <li><a class="dropdown-item" href="#scrollspyHeadingAcercaDe">Acerca de</a></li>
+            <li><a class="dropdown-item" href="#scrollspyHeadingEdu">Educación</a></li>
+            <li><a class="dropdown-item" href="#scrollspyHeadingExp">Experiencia</a></li>
+            <li><a class="dropdown-item" href="#scrollspyHeadingSkills">Skills</a></li>
+            <li><a class="dropdown-item" href="#scrollspyHeadingPro">Proyectos</a></li>
           </ul>
         </li>
       </ul>
