--- a/src/app/components/proyects/proyects.component.html
+++ b/src/app/components/proyects/proyects.component.html
@@ -17,9 +17,9 @@
 
 <h4 id="scrollspyHeadingPro" class="title title-box-text">Mis Proyectos:</h4>
 
-<div class="row">
+<div class="row p-3">
   <div class="col-sm-4" *ngFor="let proyect of proyectsInfo; let i=index">
-    <div class="card">
+    <div class="card border-primary">
 
       <div id="proy-delete-edit" *ngIf="usuarioLogueado">
         <a class="betene btn1 hover">
